<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityHeading="true"
    android:orientation="vertical"
    tools:context=".ListSymptoms">

    <TextView
        android:id="@+id/current_symptoms_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/symptom_list_header"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/currentsymptomlist"
        app:layout_constraintTop_toBottomOf="@+id/add_symptom_button"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/add_symptom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/addColor"
        android:text="@string/add_symptom_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/current_symptoms_header"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ListView
        android:id="@+id/currentsymptomlist"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/continue_diagnose_button"
        app:layout_constraintTop_toBottomOf="@+id/current_symptoms_header"></ListView>

    <Button
        android:id="@+id/continue_diagnose_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/diagnose_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentsymptomlist" />


</androidx.constraintlayout.widget.ConstraintLayout>